--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.4.0
   cloud_firestore: ^5.4.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
